update fetch (import)